tf1-triage-hub/cd/components/foundation/admission-policies/constraints/block-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockLatestTag
metadata:
  name: block-latest-tag-on-pods
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
