tf1-triage-hub/cd/components/foundation/admission-policies/constraints/require-env-label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-environment-label
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod", "Namespace"]
  parameters:
    labels:
      - environment
